--- a/index.html
+++ b/index.html
@@ -92,12 +92,6 @@
           </p>
         </div>
         <div class="wow fadeInDown feature">
-          <h3>Alpha</h3>
-          <p>
-            予想の際には、機械学習に使用する特徴量と馬券最適化パラメータ『Alpha』の値をチューニングしています。
-          </p>
-        </div>
-        <div class="wow fadeInDown feature">
           <h3>幅広いデータ</h3>
           <p>
             特徴量は過去の馬の成績、ジョッキーの勝率、馬体重、馬場状態など約50種類の中から、コースごとに選択しており、さらにこのシステムで最重要ファクターとなっている魔法のパラメータ『Alpha』が、緻密なチューニングにより回収率を最大化します。          
@@ -126,8 +120,30 @@
       </div>
     </div>
     <footer>
-      <div class="container">      
-        <p>FCCPC</p>
+      <div class="container">
+        <div class="link">
+          <p>関連リンク</p>
+          <a href="http://jra-van.jp/?wapr=56faac7e"
+             target="_blank">          
+            <img src="image/jra.png" alt="">
+          </a>
+          <a href="http://www.enterbrain.co.jp/sarabure/"
+             target="_blank">          
+            <img src="image/sarabre.png" alt="">
+          </a>
+          <a href="http://ch.nicovideo.jp/dennoushou"
+             target="_blank">          
+            <img src="image/dennou.png" alt="">
+          </a>                    
+        </div>
+
+        <div class="manager">
+          <p>運営団体</p>
+          <a href="http://fccpc.hateblo.jp"
+             target="_blank">          
+            <img class="fccpc" src="image/fccpc.png" alt="">
+          </a>           
+        </div>
       </div>
     </footer>
 
